# gitdiagram

./: .env.example  .gitignore  README.md  docker-compose.yml  eslint.config.mjs  next.config.js  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  devtest.yaml
backend/: .dockerignore  Dockerfile  entrypoint.sh  package.json  pyproject.toml
backend/app/: main.py  prompts.py
backend/app/core/: errors.py  observability.py
backend/app/routers/: generate.py
backend/app/services/: complimentary_gate.py  cost_estimator.py  diagram_state_repository.py  github_service.py  graph_service.py  mermaid_service.py  model_config.py  openai_service.py  pricing.py
backend/app/utils/: format_message.py
backend/lib/: mermaid-validator.ts
backend/scripts/: validate_mermaid.mjs
backend/tests/: test_complimentary_gate.py  test_generate_router.py  test_github_service.py  test_graph_service.py  test_mermaid_service.py  test_model_config.py  test_openai_service.py  test_pricing.py
docs/: atlas-cloud-provider-review.md  dev-setup.md  railway-backend.md
scripts/: complimentary-quota-today.mjs  dev-turbo.sh
src/app/: layout.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts
src/components/: action-button.tsx  api-key-button.tsx  api-key-dialog.tsx  browse-catalog-controls.tsx  browse-catalog-loading-state.tsx  browse-catalog-results.tsx  browse-catalog-shared.ts  browse-catalog.test.tsx  browse-catalog.tsx  browse-diagram-preview.test.tsx  browse-diagram-preview.tsx  copy-button.tsx  (+17 more)
(+78 files in other folders)
